--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -31,6 +31,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  @apply bg-gray-50 text-gray-800;
+}
+
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
